# Chess---Godot

./: chess_game.gdextension  export_presets.cfg  project.godot
.godot/: extension_list.cfg
.godot/editor/: chess_board.tscn-editstate-5f5712c67de24b6ff363887d66594fdb.cfg  chess_board.tscn-folding-5f5712c67de24b6ff363887d66594fdb.cfg  create_recent.Node  debug_scene.tscn-editstate-77517d5bbaf3d4182590c6cd729defe5.cfg  debug_scene.tscn-folding-77517d5bbaf3d4182590c6cd729defe5.cfg  editor_layout.cfg  filesystem_cache8  filesystem_update4  main_chess_scene.tscn-editstate-e5c1e39a0ca44ff3f4496972f734f402.cfg  main_chess_scene.tscn-folding-e5c1e39a0ca44ff3f4496972f734f402.cfg  project_metadata.cfg  recent_dirs  script_editor_cache.cfg  timeout.tscn-editstate-57e7a5200e12e3b0245fb2149f00d337.cfg  wait_logic.tscn-editstate-c85a71a46755f4189b889f05f24147b4.cfg  waiting.tscn-editstate-c6f60175425d95b46ce8ea4e9a838ad0.cfg  waiting.tscn-folding-c6f60175425d95b46ce8ea4e9a838ad0.cfg
.godot/imported/: FFFFORWA.TTF-26fffbbd11212765e91303547c18d341.fontdata  FFFFORWA.TTF-26fffbbd11212765e91303547c18d341.md5  Pasted image.png-7e3afc6be35945e5f525a423c225b6a9.ctex  (+31 more)
fonts/: FFFFORWA.TTF.import
scenes/: board_tilemap.tres  chess_board.tscn  copy.gd  debug_scene.tscn  main_chess_scene.tscn  timeout.tscn  wait_logic.tscn  waiting.tscn
scripts/: code_input.gd  debug_bind.gd  generate_and_wait.gd  notify_server.gd  show_code.gd
src/rust/: Cargo.toml  rustfmt.toml
src/rust/server/chess_server/: Cargo.toml
src/rust/src/: chess_board.rs  game_behavior.rs  lib.rs  waiting.rs
(+26 files in other folders)
